extra margin fix

--- a/source/assets/stylesheets/components/_projects.scss
+++ b/source/assets/stylesheets/components/_projects.scss
@@ -227,7 +227,7 @@
   }
   .project-device-macbook {
     margin-top: -48px;
-    // margin-right: -252px;
+    margin-right: -252px;
     width: 90%;
   }
   #projects {
